TEST_PROGRAMS/INVALID/alexandre_st-louis_fortier/006-if-statement-condition.min
if print 1 then
   print 1;
endif

